public-testnet/relaychains/relaychain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        securityContext:
          privileged: true
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator01
        volumeMounts:
          - mountPath: /mnt/polkadot1
            name: node1-storage
          - mountPath: /home/runner/work/testnet-deployment/testnet-deployment/public-testnet/config
            subPath: testnet-config
            name: config
        command: ["/polkadot/polkadot"]
        args: ["--chain", "testnet-config/westend-raw.json", "--base-path", "/mnt/polkadot1", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000001", "--keystore-path", "testnet-config/relaychain/keystore-v1", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator01-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node1-storage
          persistentVolumeClaim:
            claimName: node1-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator02
        volumeMounts:
          - mountPath: /mnt/polkadot2
            name: node2-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot2/config/westend-raw.json", "--base-path", "/mnt/polkadot2", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000002", "--keystore-path", "/mnt/polkadot2/config/keystore-v2", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator02-svc.default.svc.cluster.local/tcp/30333", "--log", "debug"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node2-storage
          persistentVolumeClaim:
            claimName: node2-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator03-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator03
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator03
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator03
        volumeMounts:
          - mountPath: /mnt/polkadot3
            name: node3-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot3/config/westend-raw.json", "--base-path", "/mnt/polkadot3", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000003", "--keystore-path", "/mnt/polkadot3/config/keystore-v3", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator03-svc.default.svc.cluster.local/tcp/30333", "--log", "debug"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node3-storage
          persistentVolumeClaim:
            claimName: node3-claim    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator04-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator04
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator04
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator04
        volumeMounts:
          - mountPath: /mnt/polkadot4
            name: node4-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot4/config/westend-raw.json", "--base-path", "/mnt/polkadot4", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000004", "--keystore-path", "/mnt/polkadot4/config/keystore-v4", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator04-svc.default.svc.cluster.local/tcp/30333", "--log", "debug"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node4-storage
          persistentVolumeClaim:
            claimName: node4-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator05-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator05
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator05
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator05
        volumeMounts:
          - mountPath: /mnt/polkadot5
            name: node5-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot5/config/westend-raw.json", "--base-path", "/mnt/polkadot5", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000005", "--keystore-path", "/mnt/polkadot5/config/keystore-v5", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator05-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node5-storage
          persistentVolumeClaim:
            claimName: node5-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator06-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator06
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator06
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator06
        volumeMounts:
          - mountPath: /mnt/polkadot6
            name: node6-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot6/config/westend-raw.json", "--base-path", "/mnt/polkadot6", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000006", "--keystore-path", "/mnt/polkadot6/config/keystore-v6", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator06-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node6-storage
          persistentVolumeClaim:
            claimName: node6-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator07-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator07
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator07
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator07
        volumeMounts:
          - mountPath: /mnt/polkadot7
            name: node7-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot7/config/westend-raw.json", "--base-path", "/mnt/polkadot7", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000007", "--keystore-path", "/mnt/polkadot7/config/keystore-v7", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator07-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node7-storage
          persistentVolumeClaim:
            claimName: node7-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator08-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator08
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator08
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator08
        volumeMounts:
          - mountPath: /mnt/polkadot8
            name: node8-storage  
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/polkadot8/config/westend-raw.json", "--base-path", "/mnt/polkadot8", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000008", "--keystore-path", "/mnt/polkadot8/config/keystore-v8", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/validator08-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: node8-storage
          persistentVolumeClaim:
            claimName: node8-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: validator-public-rpc-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-public-rpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-public-rpc
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.13-7d8f00b90c
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator01
        volumeMounts:
          - mountPath: /mnt/public-node
            name: public-rpc-storage
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/mnt/public-node/config/westend-raw.json", "--base-path", "/mnt/public-node", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe", "--public-addr", "/dns/public-rpc-deployment-svc.default.svc.cluster.local/tcp/30333"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: public-rpc-storage
          persistentVolumeClaim:
            claimName: public-node-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator01
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator02-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9615
      name: prom-port
      targetPort: 9615
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator02
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator03-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator03
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator04-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator04
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator05-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator05
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator06-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator06
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator07-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator07
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: validator08-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator08
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: public-rpc-deployment-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-public-rpc
